my-service.yml
apiVersion: v1
kind: Service
metadata:
  name: ip-api-service
spec:
  selector:
    app: ip-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
